# CPP-project-2022

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  Utils.h  constants.h  git-workflow.md  main.cpp  run.sh
Bullet/: Bullet.cpp  Bullet.h
Button/: Button.cpp  Button.h
CollisionManager/: CollisionManager.cpp  CollisionManager.h
Config/: gamestate_keybinds.ini  supported_keys.ini  window.ini
Entity/: Entity.cpp  Entity.h  GameMap.cpp  GameMap.h  Player.cpp  Player.h
Entity/Components/: HitboxComponent.cpp  HitboxComponent.h  MovementComponent.cpp  MovementComponent.h
Entity/Map/: Box.cpp  Box.h  Map.cpp  Map.h  Utils.cpp  Utils.h  Wall.cpp  Wall.h  theme.h  utils.cpp  utils.h
Game/: CMakeLists.txt  constants.h  main.cpp
Game/Bullet/: Bullet.cpp  Bullet.h
Game/Controller/: Controller.cpp  Controller.h
Game/GameMap/: GameMap.cpp  GameMap.h
Game/Map/: map.cpp  map.h  map_box.cpp  map_box.h  utils.cpp
Game/Objects/: DynamicObject.cpp  DynamicObject.h  Object.cpp  Object.h  Tank.cpp  Tank.h
Game/theme/: simple_theme.cpp  simple_theme.h
Serialization/: GameStateSerializator.cpp  GameStateSerializator.h
Serialization/proto/: GameState.pb.cc  GameState.pb.h  GameState.proto
Server/: NetworkClient.cpp  NetworkClient.h  NetworkServer.cpp  NetworkServer.h  client  client.cpp  run_client.sh  run_server.sh  server  server.cpp
Server/dest/: addressbook.pb.cc  addressbook.pb.h
Server/inc/: common.h  olc_network.h
States/: GameClientState.cpp  GameClientState.h  GameHostState.cpp  GameHostState.h  GameState.cpp  GameState.h  GameTextures.cpp  GameTextures.h  MainMenuState.cpp  MainMenuState.h  RoundClientState.cpp  RoundClientState.h  RoundHostState.cpp  RoundHostState.h  RoundState.cpp  RoundState.h  State.cpp  State.h
